# arabpy

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml
arabpy/: __init__.py  dictionary.py  dictionary_expanded.py  runner.py  translator.py
arabpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: changelog.md  contributing.md  faq.md  installation.md  introduction.md  license.md  quick-start.md  roadmap.md  why-arabpy.md
docs/docs/api/: dictionary.md  index.md  runner.md  translator.md
docs/docs/arabic-syntax/: built-in-functions.md  index.md  keywords.md  modules.md
docs/docs/examples/: async-await.md  classes.md  conditions.md  context-managers.md  dataclasses.md  decorators.md  dictionaries.md  exceptions.md  file-handling.md  functions.md  generators.md  index.md  lists.md  loops.md  oop.md  typing.md  variables.md
docs/src/css/: custom.css
examples/: basic_usage.py
scripts/: expand_dictionary.py
tests/: __init__.py  test_arabic_code_runner.py  test_arabic_code_runner_simple.py  test_translator.py
